--- a/public/css/main.css
+++ b/public/css/main.css
@@ -801,3 +801,156 @@ main#content .container {
     width: 170px;
   }
 }
+
+/* line 451, sass/main.sass */
+#contact .success {
+  display: none;
+}
+/* line 453, sass/main.sass */
+#contact .errors {
+  display: none;
+  font-style: italic;
+  padding: 10px 0;
+  border-top: 1px solid #b24629;
+  border-bottom: 1px solid #b24629;
+  margin: 20px 0;
+}
+/* line 460, sass/main.sass */
+#contact .errors ul li {
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+/* line 463, sass/main.sass */
+#contact .errors ul li:last-child {
+  margin-bottom: 0;
+}
+/* line 466, sass/main.sass */
+#contact form .form-left {
+  float: left;
+  width: 240px;
+}
+/* line 469, sass/main.sass */
+#contact form .form-right {
+  float: left;
+}
+/* line 471, sass/main.sass */
+#contact form #location {
+  display: none;
+}
+/* line 473, sass/main.sass */
+#contact label, #contact input, #contact button, #contact select, #contact textarea {
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 20px;
+}
+/* line 477, sass/main.sass */
+#contact .required {
+  color: red;
+  padding-left: 5px;
+}
+/* line 481, sass/main.sass */
+#contact input[type="submit"] {
+  -webkit-appearance: button;
+  display: block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  text-align: center;
+  cursor: pointer;
+  background-image: none;
+  border: 1px solid transparent;
+  color: white;
+  background: #ed8f17;
+  font-size: 16px;
+  line-height: 20px;
+  font-family: "P22MackinacMedium", Georgia, serif;
+  margin-top: 10px;
+  width: 220px;
+}
+/* line 498, sass/main.sass */
+#contact label {
+  display: block;
+  margin-bottom: 5px;
+}
+/* line 502, sass/main.sass */
+#contact select, #contact textarea {
+  display: inline-block;
+  height: 20px;
+  padding: 4px 6px;
+  margin-bottom: 10px;
+  font-size: 14px;
+  line-height: 20px;
+  color: #555555;
+  vertical-align: middle;
+}
+/* line 514, sass/main.sass */
+#contact input[type="text"], #contact input[type="password"], #contact input[type="datetime"], #contact input[type="datetime-local"], #contact input[type="date"], #contact input[type="month"], #contact input[type="time"], #contact input[type="week"], #contact input[type="number"], #contact input[type="email"], #contact input[type="url"], #contact input[type="search"], #contact input[type="tel"], #contact input[type="color"] {
+  display: inline-block;
+  height: 20px;
+  padding: 4px 6px;
+  margin-bottom: 10px;
+  font-size: 14px;
+  line-height: 20px;
+  color: #555555;
+  vertical-align: middle;
+}
+/* line 524, sass/main.sass */
+#contact input {
+  width: 206px;
+}
+/* line 527, sass/main.sass */
+#contact textarea {
+  width: 340px;
+  height: 140px;
+  background-color: white;
+  border: 1px solid #cccccc;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
+  -moz-transition: border linear 0.2s, box-shadow linear 0.2s;
+  -o-transition: border linear 0.2s, box-shadow linear 0.2s;
+  transition: border linear 0.2s, box-shadow linear 0.2s;
+}
+/* line 541, sass/main.sass */
+#contact input[type="text"], #contact input[type="password"], #contact input[type="datetime"], #contact input[type="datetime-local"], #contact input[type="date"], #contact input[type="month"], #contact input[type="time"], #contact input[type="week"], #contact input[type="number"], #contact input[type="email"], #contact input[type="url"], #contact input[type="search"], #contact input[type="tel"], #contact input[type="color"] {
+  background-color: white;
+  border: 1px solid #cccccc;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
+  -moz-transition: border linear 0.2s, box-shadow linear 0.2s;
+  -o-transition: border linear 0.2s, box-shadow linear 0.2s;
+  transition: border linear 0.2s, box-shadow linear 0.2s;
+}
+/* line 552, sass/main.sass */
+#contact textarea:focus {
+  border-color: rgba(82, 168, 236, 0.8);
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+}
+/* line 560, sass/main.sass */
+#contact input[type="text"]:focus, #contact input[type="password"]:focus, #contact input[type="datetime"]:focus, #contact input[type="datetime-local"]:focus, #contact input[type="date"]:focus, #contact input[type="month"]:focus, #contact input[type="time"]:focus, #contact input[type="week"]:focus, #contact input[type="number"]:focus, #contact input[type="email"]:focus, #contact input[type="url"]:focus, #contact input[type="search"]:focus, #contact input[type="tel"]:focus, #contact input[type="color"]:focus {
+  border-color: rgba(82, 168, 236, 0.8);
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+}
+/* line 567, sass/main.sass */
+#contact .uneditable-input:focus {
+  border-color: rgba(82, 168, 236, 0.8);
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+}
+/* line 575, sass/main.sass */
+#contact input[type="radio"], #contact input[type="checkbox"] {
+  margin: 4px 0 0;
+  margin-top: 1px \9;
+  *margin-top: 0;
+  line-height: normal;
+}
